# Home_Animals

./: CMakeLists.txt  User.cpp  User.h  input.txt  main.cpp
Animals/: Animal.cpp  Animal.h  Cat.h  Composite.h  Dog.h  Factory.h  Factory_two.h  Fish.h  Hamster.h  Unknown.h
